add pay by cash

--- a/src/pages/bill/BillListPage.css
+++ b/src/pages/bill/BillListPage.css
@@ -35,3 +35,10 @@
   background: #fee2e2;
   color: #991b1b;
 }
+.btn.cash {
+  background: #16a34a;
+  color: #fff;
+}
+.btn.cash:hover {
+  background: #15803d;
+}
